# ForeignWordsReader

./: .gitignore  AGENTS.md  crash.txt
app-android/: build.gradle.kts
app-android/src/main/kotlin/com/example/myapplication/android/: MainActivity.kt
app-ios-swift/app-ios-swift/: BookCoverImageLoader.swift  MainView.swift  RootView.swift  iOSApp.swift
app-ios-swift/app-ios-swift.xcodeproj/: project.pbxproj
app-ios-swift/app-ios-swift.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
app-ios-swift/app-ios-swift/DecomposeHelpers/: StackView.swift  StateValue.swift
app-ios-swift/app-ios-swift/reader-platform/: DefaultIosReaderComponent.swift  IosBookLibraryGateway.swift  IosEpubReaderViewController.swift  IosReaderPersistence.swift  IosReaderRuntime.swift  IosReaderSearchGateway.swift  IosReaderState.swift  IosReadiumServices.swift  ReaderView.swift
compose-ui/src/commonMain/kotlin/com/example/myapplication/root/: RootContent.kt
debug-lemma-index/: 18dd676c7970568ce29d7dbb7f0d399e8f649e966f010c286f470a0cc9bea62d-top-lemmas-tfidf.txt  18dd676c7970568ce29d7dbb7f0d399e8f649e966f010c286f470a0cc9bea62d-top-lemmas.txt
docs/: book-preprocessing-pipeline.md
gradle/: libs.versions.toml
native/udpipe/: CMakeLists.txt  README.md  build-ios.sh
native/udpipe/adapter/: udpipe_adapter.cpp  udpipe_adapter.h  udpipe_jni.cpp
scripts/: generate-wordfreq-db.py  rebuild-ios-simulator.sh
shared/: build.gradle.kts
shared/src/androidMain/assets/frequency/: global-frequency.sqlite
shared/src/nativeInterop/cinterop/: udpipeAdapter.def
(+50 files in other folders)
